fix(Mobile): Bump bottom padding on mobile navbar

--- a/components/tailored/core/mobile/nav/Nav.less
+++ b/components/tailored/core/mobile/nav/Nav.less
@@ -7,6 +7,7 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
+  padding-bottom: 1rem;
 
   svg {
     font-size: @small-icon-size;
